@@ -75,6 +75,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11620: Fix support for SND_MEMORY in winsound.PlaySound.  Based on a
+  patch by Tim Lesher.
+
 - Issue #11734: Add support for IEEE 754 half-precision floats to the
   struct module. Based on a patch by Eli Stevens.
 
